--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,7 @@ default: &default
 development:
   <<: *default
   database: app_development
+  url: <%= ENV["DATABASE_URL"] %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -27,6 +28,7 @@ development:
 test:
   <<: *default
   database: app_test
+  url: <%= ENV["DATABASE_TEST_URL"] %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -53,3 +55,4 @@ production:
   database: app_production
   username: app
   password: <%= ENV["APP_DATABASE_PASSWORD"] %>
+  url: <%= ENV["DATABASE_URL"] %>
