--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,8 @@ jobs:
         run: bundle exec rspec --color --format documentation
 
       - name: Run RuboCop
-        run: bundle exec rubocop
+        run: bundle exec rubocop --format progress --color
+        continue-on-error: true
 
   build:
     runs-on: ubuntu-latest
