--- a/config/database.yml
+++ b/config/database.yml
@@ -26,9 +26,13 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
+  adapter: mysql2
+  encoding: utf8mb4
   database: app_test
-  url: <%= ENV["DATABASE_TEST_URL"] %>
+  username: root
+  password: password
+  host: 127.0.0.1
+  port: 3306
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
