--- a/config/database.yml
+++ b/config/database.yml
@@ -26,13 +26,10 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: mysql2
-  encoding: utf8mb4
+  <<: *default
   database: app_test
-  username: root
-  password: password
-  host: 127.0.0.1
-  port: 3306
+  # Prefer DATABASE_TEST_URL when running in containers; fall back to local settings
+  url: <%= ENV['DATABASE_TEST_URL'] if ENV['DATABASE_TEST_URL'] %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
